--- a/chart/hystrix-dashboard/values.yaml
+++ b/chart/hystrix-dashboard/values.yaml
@@ -11,6 +11,7 @@ image:
 preJob:
   preConfig:
     configFile: application.yml
+    appname: hystrix-dashboard
     mysql:
       host: localhost
       port: 3306
@@ -36,7 +37,7 @@ service:
 
 metrics:
   path: /prometheus
-  label: java-spring
+  group: java-spring
 
 logs:
   parser: java-spring
