[IMP] change default log parser to spring-boot

--- a/chart/hystrix-dashboard/values.yaml
+++ b/chart/hystrix-dashboard/values.yaml
@@ -9,9 +9,9 @@ image:
   pullPolicy: Always
 
 preJob:
+  appname: hystrix-dashboard
   preConfig:
     configFile: application.yml
-    appname: hystrix-dashboard
     mysql:
       host: localhost
       port: 3306
@@ -37,10 +37,10 @@ service:
 
 metrics:
   path: /prometheus
-  group: java-spring
+  group: spring-boot
 
 logs:
-  parser: java-spring
+  parser: spring-boot
 
 resources: 
   # We usually recommend not to specify default resources and to leave this as a conscious
