--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
           yq w -i ${CHART_PATH%/*}/values.yaml image.repository ${DOCKER_GROUP_NAME}/${PROJECT_NAME}
           yq w -i ${CHART_PATH%/*}/values.yaml image.tag ${CI_COMMIT_TAG}
           helm repo add choerodon "${CHART_REPOSITORY}/${CHART_ORGANIZATION}/${CHART_PROJECT}/"
-          helm push ${CHART_PATH%/*} --version ${CI_COMMIT_TAG} choerodon
+          helm push --username ${HELM_USER} --password ${HELM_PASSWORD} ${CHART_PATH%/*} --version ${CI_COMMIT_TAG} choerodon
 
 workflows:
   version: 2
