--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>hystrix-dashboard</artifactId>
 
     <properties>
-        <choerodon.starters.version>0.5.4.RELEASE</choerodon.starters.version>
+        <choerodon.starters.version>0.8.0.RELEASE</choerodon.starters.version>
     </properties>
 
     <dependencies>
@@ -27,6 +27,11 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-config-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.choerodon</groupId>
+            <artifactId>choerodon-starter-core</artifactId>
+            <version>${choerodon.starters.version}</version>
         </dependency>
         <!-- 添加cpu监控 -->
         <dependency>
